samples/_failures_safe/1761520625_cb4e37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5cee7b5.c: In function ‘main’:
./samples/SAFE/__tmp_b5cee7b5.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
